# dapr-sdk-wasmedge

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
config/: configuration.yaml
examples/: .dockerignore  Cargo.toml
examples/config/: configuration.yaml  local-secret-store.yaml  pubsub.yaml  statestore.yaml
examples/docker_compose/: README.md  docker-compose.yaml
examples/echo/: Cargo.toml  Dockerfile  run.sh
examples/echo/src/: main.rs
examples/src/: main.rs
examples/tests/: Cargo.toml  Dockerfile  run.sh
examples/tests/src/: main.rs
src/: lib.rs
